WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69467
[chromium] ASSERT triggered when gpu process lost in single-threaded compositing path
https://bugs.webkit.org/show_bug.cgi?id=69467
Summary
[chromium] ASSERT triggered when gpu process lost in single-threaded composit...
James Robinson
Reported
2011-10-05 14:46:42 PDT
[chromium] ASSERT triggered when gpu process lost in single-threaded compositing path
Attachments
Patch
(2.70 KB, patch)
2011-10-05 14:47 PDT
,
James Robinson
kbr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2011-10-05 14:47:25 PDT
Created
attachment 109867
[details]
Patch
Kenneth Russell
Comment 2
2011-10-05 14:57:29 PDT
Comment on
attachment 109867
[details]
Patch Looks OK to me assuming it's been tested. Also should fix whatever the style failure is.
James Robinson
Comment 3
2011-10-05 15:41:35 PDT
Committed
r96759
: <
http://trac.webkit.org/changeset/96759
>
James Robinson
Comment 4
2011-10-05 17:59:33 PDT
The stylebot error was a bug in the new watchlist implementation, for those curious.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug