[chromium] ASSERT triggered when gpu process lost in single-threaded compositing path https://bugs.webkit.org/show_bug.cgi?id=69467

Reviewed by Kenneth Russell.

Shuffles debug-only bookkeeping around to more closely match what we do in the threaded path and not trip a
false-positive ASSERT().

* platform/graphics/chromium/cc/CCSingleThreadProxy.cpp:
(WebCore::CCSingleThreadProxy::doComposite):

Canonical link: https://commits.webkit.org/85517@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96759 268f45cc-cd09-0410-ab3c-d52691b4dbfc